# Patient_safety_sentinel

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: copilot-instructions.md
Design/1/: code.html
Design/2/: code.html
Design/3/: DESIGN.md  code.html
Design/4/: code.html
src/: App.tsx  AppShell.tsx  PSSPortal.tsx  SignalPortal.tsx  main.tsx  portal.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
