[package]
name = "patient_safety_sentinel"
version = "0.1.0"
edition = "2021"

[build-dependencies]

tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.20"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tauri = { version = "2", features = [] }

[features]
default = []
